--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,129 @@
-fastapi
-uvicorn
-langchain
-google-cloud-aiplatform
-faiss-cpu
-pypdf
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+altair==5.5.0
+altgraph @ file:///AppleInternal/Library/BuildRoots/4~B7IEugDHS-fAL-bTRqAKCb_qmc84naJzmK7469Q/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+async-timeout==4.0.3
+attrs==25.4.0
+blinker==1.9.0
+Bottleneck==1.5.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.1.8
+cryptography==46.0.4
+dataclasses-json==0.6.7
+docstring_parser==0.17.0
+exceptiongroup==1.3.0
+faiss-cpu==1.12.0
+fastapi==0.128.2
+filelock==3.19.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+future @ file:///AppleInternal/Library/BuildRoots/4~B7IEugDHS-fAL-bTRqAKCb_qmc84naJzmK7469Q/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-api-core==2.29.0
+google-auth==2.48.0
+google-cloud-aiplatform==1.136.0
+google-cloud-bigquery==3.40.0
+google-cloud-core==2.5.0
+google-cloud-resource-manager==1.16.0
+google-cloud-storage==2.19.0
+google-crc32c==1.8.0
+google-genai==1.47.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+grpc-google-iam-v1==0.14.3
+grpcio==1.78.0
+grpcio-status==1.78.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.79
+langchain-google-vertexai==2.1.2
+langchain-text-splitters==0.3.11
+langsmith==0.4.37
+macholib @ file:///AppleInternal/Library/BuildRoots/4~B7IEugDHS-fAL-bTRqAKCb_qmc84naJzmK7469Q/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+narwhals==2.10.2
+networkx==3.2.1
+numexpr==2.10.2
+numpy==2.0.2
+orjson==3.11.4
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+propcache==0.4.1
+proto-plus==1.27.1
+protobuf==6.33.0
+pyarrow==21.0.0
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.4
+pydantic-settings==2.11.0
+pydantic_core==2.41.5
+pydeck==0.9.1
+pypdf==6.1.3
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.36.2
+regex==2025.11.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+rpds-py==0.27.1
+rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==5.1.2
+six @ file:///AppleInternal/Library/BuildRoots/4~B7IEugDHS-fAL-bTRqAKCb_qmc84naJzmK7469Q/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.49.3
+streamlit==1.50.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+toml==0.10.2
+torch==2.8.0
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.57.1
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.39.0
+validators==0.35.0
+websockets==15.0.1
+yarl==1.22.0
+zstandard==0.25.0
