--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ langchain-google-vertexai==2.1.2
 google-cloud-aiplatform==1.136.0
 
 # Vector DB & Retrieval
-pinecone-client
+pinecone>=5.1.0
+langchain-pinecone>=0.2.0
 langchain==0.3.27
 langchain-community==0.3.31
 langchain-core==0.3.79
