--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,24 @@
 # Web Framework & Server
 fastapi==0.128.2
-uvicorn==0.39.0
+uvicorn[standard]==0.39.0
 python-dotenv==1.2.1
+python-multipart>=0.0.12
 
-# AI & LLM (Unified Google SDK)
-# This is the specific package your code is looking for
-langchain-google-genai>=2.0.0
-langchain-google-vertexai==2.1.2
-google-cloud-aiplatform==1.136.0
+# AI & LLM (Flexible Versions for Resolution)
+langchain
+langchain-core
+langchain-community
+langchain-google-vertexai
+google-cloud-aiplatform
 
-# Vector DB & Retrieval
+# Vector DB
 pinecone>=5.1.0
-langchain-pinecone>=0.2.0
-langchain==0.3.27
-langchain-community==0.3.31
-langchain-core==0.3.79
+langchain-pinecone
 
-# Database & Data Processing
+# Document & Data Processing
+pypdf
+beautifulsoup4
+numpy
+pandas
 psycopg2-binary
 sqlalchemy
-beautifulsoup4
-pypdf==6.1.3
-numpy==2.0.2
-pandas==2.3.3
-
-# Python File upload
-python-multipart>=0.0.12
